tests/rosetta/out/OCaml/DNS-query.ml
(* Generated by Mochi compiler v0.10.30 on 2025-07-19T00:24:49Z *)
let rec __show v =
  let open Obj in
  let rec list_aux o =
    if is_int o && (magic (obj o) : int) = 0 then "" else
     let hd = field o 0 in
     let tl = field o 1 in
     let rest = list_aux tl in
     if rest = "" then __show (obj hd) else __show (obj hd) ^ "; " ^ rest
  in
  let r = repr v in
  if is_int r then string_of_int (magic v) else
  match tag r with
    | 0 -> if size r = 0 then "[]" else "[" ^ list_aux r ^ "]"
    | 252 -> (magic v : string)
    | 253 -> string_of_float (magic v)
    | _ -> "<value>"


let res : Obj.t list = net.LookupHost "www.kame.net"
let addrs = List.nth (res) 0
let err = List.nth (res) 1

let () =
  if (err = nil) then (
    print_endline (__show (addrs));
  ) else (
    print_endline (__show (err));
  ) ;
